@@ -1,17 +1,18 @@
 
 package com.foodtrip.ftService.rs;
 
+import javax.ws.rs.Consumes;
 import javax.ws.rs.GET;
 import javax.ws.rs.POST;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
 
 import com.foodtrip.ftcontroller.FTTripController;
 import com.foodtrip.ftmodelws.TripIDWS;
 import com.foodtrip.ftmodelws.TripView;
-
 @Path("/trip")
 public class FTServiceTrip {
     
@@ -28,9 +29,23 @@ public class FTServiceTrip {
     	return new FTTripController().getTrip(endCompany,orderID);
     }
     
+    
     @POST
-    @Produces({MediaType.APPLICATION_JSON })
+    @Produces(MediaType.APPLICATION_JSON)
+    @Consumes(MediaType.APPLICATION_JSON)
     public TripView getTrip(TripIDWS tripID) {
-    	return new FTTripController().getTrip(new Long(tripID.getEndCompany()),new Long(tripID.getId()));
+    	if (tripID == null || tripID.getId() == null) {
+    		return null;
+    	}
+    	
+    	String[] split = tripID.getId().split("-");
+    	if(split.length < 2) {
+    		return null;
+    	}
+    	
+    	Long id = Long.valueOf(split[0]);
+    	Long endCompany =  Long.valueOf(split[1]);
+    	
+    	return new FTTripController().getTrip(id,endCompany);
     }
 }
